force-app/main/default/objects/Krow__Issue_Krow__c/Krow__Issue_Krow__c.object-meta.xml
<CustomObject>
    <label>Issue</label>
    <nameField>
        <label>Issue Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>