force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Create_Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Jira_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Jira Ticket</label>
    <type>Checkbox</type>
</CustomField>