force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Issue_Detail__c.field-meta.xml
<CustomField>
    <fullName>Krow__Issue_Detail__c</fullName>
    <label>Issue Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>