force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Issue_ID__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Issue ID</label>
    <type>AutoNumber</type>
</CustomField>