force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Jira_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Issue_Id__c</fullName>
    <label>Jira Issue Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>