force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Project_Risk__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Risk</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Risk__c.Krow__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Krow__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Risk__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>