force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Resolution__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resolution__c</fullName>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>