force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Severity__c.field-meta.xml
<CustomField>
    <fullName>Krow__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>