force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Zendesk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesk_Ticket__c</fullName>
    <label>Zendesk Ticket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>