force-app/main/default/objects/Krow__Issue_Krow__c/fields/Krow__Zendesk_Ticket_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesk_Ticket_Url__c</fullName>
    <label>Zendesk Ticket Url</label>
    <type>Url</type>
</CustomField>