force-app/main/default/objects/Krow__Issue_Krow__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Issue_ID__c</columns>
    <columns>Krow__Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>